
Changelog
=========

2019.1.0 (unreleased)
---------------------

- Make sure favorite button is in front of the watermark header. [njohner]
- Skip creation of the tasks pdf on resolve for dossiers without tasks. [phgross]
- Give View permission to Editors on mails. [njohner]
- Clear role assignments on contained object after forwarding creation. [njohner]
- Testserver: add support for custom fixtures. [jone]
- Reindex and store additionally supported bumblebee documents. [elioschmutz]
- Fix scrubbing the server version out of the HTTP response headers. [Rotonen]
- Make sure docproperties gets updated when updating an agendaitem list or a protocol. [phgross]
- Fix order issue when deleting a favorite.  [phgross]
- Add document tooltip to inbox document listing. [njohner]
- Fix logo upload in the theme control-panel. [phgross]
- Solr TabbedView filters: Also include non-wildcarded terms in query. [lgraf]
- Better label the Oneoffixx template selection dropdown default value. [Rotonen]
- Notifications: Defer sending mails until end of transaction. [lgraf]
- Make the Oneoffixx timeout configurable via the registry. [Rotonen]
- Update change-date properly if meeting documents have been updated. [elioschmutz]
- Update unmatching label for modification dates for meeting documents. [elioschmutz]
- Fix broken .xls mimetypes-registry entry. [elioschmutz]
- Implement WebActions storage and REST API. [lgraf]
- Fix changing task to or from private via edit form. [deiferni]
- Fix creating private tasks by mistake. [deiferni]
- Add simple cache invalidation mechanism for javascript included in templates. [deiferni]
- Fix handling of initial version when saving a document as PDF. [njohner]
- Include agenda item description in TOC json. [deiferni]
- Fix bug in paragraph agendaitem item_number display. [njohner]
- Group fields in Committee edit forms. [njohner]
- Scrub Bobo Call Interface data out of the HTTP response headers. [Rotonen]