@@ -28,11 +28,6 @@
       name="blocked_local_roles"
       />
 
-  <adapter
-      factory=".indexers.sortable_title"
-      name="sortable_title"
-      />
-
   <adapter factory=".repositoryfolder.NameFromTitle" />
 
   <adapter factory=".repositoryroot.RepositoryRootNameFromTitle" />
